# Alas-Latinas

./: .gitignore  DOCUMENTATION.md  docker-compose.yml
backend/: .env.example  README-DATABASE.md  README-WEB3.md  app.py  index.js  nixpacks.toml  package-lock.json  package.json  requirements.txt  schema.sql  webauthn-routes.js
backend/data/: seed.json
backend/db/: biometric-schema.sql  seed.sql
backend/lib/: storage.js  web3-store.js
backend/scripts/: seed-db.js  test-db.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Navbar.vue  PackageCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  biometric.js
frontend/src/stores/: auth.js  packages.js
frontend/src/views/: Dashboard.vue  Favorites.vue  Home.vue  Login.vue  MyReservations.vue  PackageDetail.vue  Packages.vue  QrAuth.vue  Register.vue
frontend/src/views/admin/: AdminDashboard.vue  AdminPackages.vue  AdminReservations.vue  AdminUsers.vue
mi-contrato/: CONTRACT_ID  Cargo.toml
mi-contrato/src/: lib.rs
mi-contrato/test_snapshots/tests/: test_cancel_reservation.1.json  test_confirm_and_complete.1.json  test_create_reservation.1.json  test_init_and_create_package.1.json  test_refund.1.json
