[package]
name = "mi_contrato"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.0.0-rc.1"
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { version = "26.0.0-rc.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true